fix unselectable inputs bug. invisible div was covering inputs because of relative position

--- a/client/css/grayscale.css
+++ b/client/css/grayscale.css
@@ -612,8 +612,6 @@ body {
 }
 
 .credit-card-form #payment-errors {
-  position:relative;
-  top: -24px;
 }
 
 
